# Quantum-Virtual-Machine

./: .gitignore  Cargo.toml  README.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
benches/: scheduler_bench.rs
docs/: parser-implementation-summary.md  topology-implementation-summary.md
docs/plans/: TOPOLOGY_FIXES.md  qvm-implementation-plan.md
examples/: basic_scheduling.rs
memory/agents/: README.md
memory/sessions/: README.md
src/: error.rs  lib.rs  wasm.rs
src/api/: cli.rs  mod.rs  wasm.rs
src/circuit_ir/: builder.rs  mod.rs  operations.rs  parser.rs  parser_demo.rs
src/composer/: mapping.rs  mod.rs  output.rs  timing.rs
src/scheduler/: assignment.rs  batch.rs  binpack.rs  mod.rs  multiplexing.rs  optimization.rs
src/topology/: buffer.rs  loaders.rs  mod.rs  partition.rs  tile.rs  visualization.rs
tests/: composer_tests.rs  integration_tests.rs  parser_integration_test.rs  parser_only_test.rs  scheduler_tests.rs  topology_tests.rs
