[package]
name = "qvm-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["ruv <ruv@ruv.net>"]
description = "High-performance quantum circuit scheduler for multi-job quantum computing with OpenQASM 3"
documentation = "https://docs.rs/qvm-scheduler"
homepage = "https://github.com/ruvnet/Quantum-Virtual-Machine"
repository = "https://github.com/ruvnet/Quantum-Virtual-Machine"
readme = "README.md"
license = "MIT"
keywords = ["quantum", "qasm", "scheduler", "wasm", "quantum-computing"]
categories = ["science", "wasm", "algorithms", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["tokio/rt-multi-thread", "tokio/fs", "tokio/net"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
wasm-bindgen-futures = { version = "0.4", optional = true }

# WASM bindings
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

# Parsing
nom = "7.1"

# Graph algorithms
petgraph = "0.6"

# Utilities
indexmap = "2.0"
smallvec = { version = "1.11", features = ["serde"] }
rustc-hash = "1.1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
insta = "1.34"
tokio-test = "0.4"

[[bench]]
name = "scheduler_bench"
harness = false

[[bin]]
name = "qvm"
path = "src/bin/qvm.rs"
required-features = ["std"]

[[example]]
name = "basic_scheduling"
required-features = ["std"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true
